nes-systests/systest/tests/testdata/errors/schema/TypeDifference.dummy
Source stream UINT64 id
1

SINK CORRECT_SINK UINT64 stream$id
SELECT id FROM stream INTO CORRECT_SINK
----
1

SINK INCORRECT_SINK INT64 stream$id
SELECT id FROM stream INTO INCORRECT_SINK
----
1
